<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/desc_title_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/desc_title_create"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/image"
        app:layout_constraintEnd_toEndOf="@+id/image"
        app:layout_constraintStart_toStartOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/picture"
        app:layout_constraintBottom_toTopOf="@+id/deskripsiTextField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/buat_story"/>

    <EditText
        android:id="@+id/deskripsiTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/hint_deskripsi"
        android:fontFamily="@font/poppins_light"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/buttonKamera"
        app:layout_constraintEnd_toEndOf="@id/buttonUploadStory"
        app:layout_constraintStart_toStartOf="@id/buttonUploadStory"/>

    <Button
        android:id="@+id/buttonKamera"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/deskripsiTextField"
        app:layout_constraintTop_toBottomOf="@+id/deskripsiTextField"
        android:background="@drawable/rounded_shape"
        android:text="@string/kamera"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="16sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/buttonGaleri"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/deskripsiTextField"
        app:layout_constraintTop_toBottomOf="@+id/deskripsiTextField"
        android:background="@drawable/rounded_shape"
        android:text="@string/galeri"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"
        android:textAllCaps="false"/>


    <Button
        android:id="@+id/buttonUploadStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGaleri"
        android:background="@drawable/rounded_shape"
        android:text="@string/upload"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"
        android:textAllCaps="false"
        android:layout_margin="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>