<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.RegisterActivity">

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/daftar_akun_baru"
        android:textColor="@color/primaryColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutEmailTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNameTextField"
        style="@style/TextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTextView"
        app:errorEnabled="true"
        app:errorTextColor="@color/primaryColor">

        <EditText
            android:id="@+id/nameTextField"
            style="@style/TextField"
            android:background="@drawable/rounded_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_nama"
            android:fontFamily="@font/poppins_light"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmailTextField"
        style="@style/TextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutNameTextField"
        app:errorEnabled="true"
        app:errorTextColor="@color/primaryColor">

        <EditText
            android:id="@+id/tf_email"
            style="@style/TextField"
            android:background="@drawable/rounded_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:fontFamily="@font/poppins_light"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPasswordTextField"
        style="@style/TextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutEmailTextField"
        app:passwordToggleEnabled="true">

        <com.example.storyapp.custom_view.CustomPassword
            android:id="@+id/tf_password"
            style="@style/TextField"
            android:background="@drawable/rounded_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            android:hint="@string/hint_pw"
            android:fontFamily="@font/poppins_light"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.example.storyapp.custom_view.CustomButton
        android:id="@+id/bt_register"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPasswordTextField" />

    <TextView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_arrow_circle_left"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/back_to_login"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_register" />

</androidx.constraintlayout.widget.ConstraintLayout>