<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:background="@color/disabledButtonColor"
    tools:context=".view.LoginActivity">

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/login"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmailTextField"
        style="@style/TextField"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:errorEnabled="true"
        app:errorTextColor="@color/primaryColor">

        <EditText
            android:id="@+id/tf_email"
            style="@style/TextField"
            android:background="@drawable/rounded_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:fontFamily="@font/poppins_light"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPasswordTextField"
        style="@style/TextField"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutEmailTextField"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp">

        <com.example.storyapp.custom_view.CustomPassword
            android:id="@+id/tf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            android:hint="@string/hint_pw"
            android:fontFamily="@font/poppins_light"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.example.storyapp.custom_view.CustomButton
        android:id="@+id/bt_login"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPasswordTextField" />

    <TextView
        android:id="@+id/NoAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/noAcc"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login" />

    <Button
        android:id="@+id/bt_register"
        style="@style/Button"
        android:layout_margin="20dp"
        android:gravity="center"
        android:background="@drawable/border"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:textStyle="bold"
        android:text="@string/register"
        android:fontFamily="@font/poppins_semibold"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NoAcc" />


</androidx.constraintlayout.widget.ConstraintLayout>