<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.StoryDetailActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/storyImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_user"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/storyByTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            android:text="@string/story_by"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="20sp"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyByTextView"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_light"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:id="@+id/deskripsiTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUser"
            android:text="@string/deskripsi"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="20sp"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deskripsiTextView"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_light"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:id="@+id/createdAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            android:text="@string/created_at"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="20sp"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createdAt"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_light"
            android:layout_marginHorizontal="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>